--- a/compile.js.html
+++ b/compile.js.html
@@ -2,6 +2,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="/styles/style.css">
 	
 </head> 
@@ -202,6 +204,8 @@ let html = (body, styles = []) => `
 &lt;!DOCTYPE html>
 &lt;html>
 &lt;head>
+	&lt;meta charset="UTF-8">
+	&lt;meta name="viewport" content="width=device-width, initial-scale=1">
 	&lt;link rel="stylesheet" href="/styles/style.css">
 	${styles.map(stylesheet).join("")}
 &lt;/head> 
