--- a/compile.js.html
+++ b/compile.js.html
@@ -116,6 +116,7 @@ async function eat(tree) {
 }
 
 setHookFor(["*", "*/*"], arena)
+setHookFor(['**/*.md'], arena)
 setHookFor("**/*.md", {
 	condition: (item, child) => {
 		return item.tag == 'p' && child.split(" ")[0] == 'insert:'
@@ -148,14 +149,19 @@ setHookFor("**/*.md", {
 
 setHookFor("pages/publication_engine.md", {
 	condition: (item, child) => {
-		if (item.tag == 'h3') {
-			console.log('h3!!!', child)
+		if (
+			item.tag == 'h1' ||
+			item.tag == 'h2' ||
+			item.tag == 'h3' ||
+			item.tag == 'h4' ||
+			item.tag == 'h5'
+		) {
 			return true
 		}
 		else false
 	},
 	element: (item, child) => {
-		return `&lt;${item.tag} id='${child.split(" ").join('-')}'> ${child} &lt;/${item.tag}>`
+		return `&lt;${item.tag} id='${child.toLowerCase().split(" ").join('-')}'> ${child} &lt;/${item.tag}>`
 	}
 })
 
